fix: Status icon not clearly visible (#725)

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -181,6 +181,13 @@ body {
   line-height: 22px !important;
 }
 
+.mat-icon-\[24px\] {
+  font-size: 24px !important;
+  width: 24px !important;
+  height: 24px !important;
+  line-height: 24px !important;
+}
+
 .mat-icon-\[28px\] {
   margin-top: 8px;
   font-size: 28px !important;
